--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div id="main">
-    Hello World
+    hello (world, this will replaced)
   </div>
   <script src='lib.js'></script>
   <script src='app.js'></script>
